# modulus-launch

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation_request.yml  feature_request.yml
.github/workflows/: blossom-ci.yml
accompanying_licenses/: all_licenses.txt
dockerfiles/: Dockerfile  Dockerfile.ci  Dockerfile.fcn  README.md  Readme.md  requirements_ci.txt
docs/: Makefile  conf.py  index.rst
docs/api/: modulus.launch.logging.rst  modulus.launch.utils.rst
examples/: CONTRIBUTING.MD  CONTRIBUTING.md  README.md
examples/cfd/ahmed_body_mgn/: README.md  constants.py  inference.py  train.py  utils.py
examples/cfd/bloodflow_1d_mgn/: README.md  config.yaml  constants.py  generate_dataset.py  generate_graphs.py  graph_tools.py  inference.py  train.py  vtk_tools.py
examples/cfd/darcy_nested_fnos/: evaluate_nested_darcy.py  generate_nested_darcy.py  train_nested_darcy.py  utils.py
examples/cfd/gray_scott_rnn/: README.md
examples/cfd/navier_stokes_rnn/: README.md
examples/cfd/stokes_mgn/: README.md  constants.py  inference.py  pi_inference.py  train.py  utils.py
examples/cfd/vortex_shedding_mgn/: README.md  constants.py  inference.py  train.py
examples/experimental/weather/: example_datapipe.py  install.sh  loss.py  loss_handler.py  network_instantiation.py  optimizer_handler.py  train.py
examples/healthcare/bloodflow_1d_mgn/: README.md  config.yaml  generate_dataset.py  generate_graphs.py  graph_tools.py  inference.py  train.py
examples/healthcare/brain_anomaly_detection/: train_FNO.py
examples/vfgn/: README.md  render_rollout.py  requirements.txt  train.py  train_global_dynamic_loss.py
examples/vfgn/data_process/: acceleration_profile.py  deform_analyze.py  out2pvtu.py  rawdata2tfrecord_large_ts.py
examples/vfgn/models/: README.md
examples/weather/datapipe_benchmarks/: benchmark.py  custom_gds.py  experiment.py  fancy_bar_plot.py  fetch_era5.py  zarr_utils.py
examples/weather/dataset_download/: README.md  era5_mirror.py  start_mirror.py
examples/weather/dlwp/: README.md  era5_hdf5.py  map_CS64_LL721x1440.nc  map_LL721x1440_CS64.nc  train_dlwp.py
examples/weather/era5_download/: README.md  start_mirror.py
examples/weather/fcn_afno/: README.md  train_era5.py
examples/weather/fcn_sfno/: README.md  ensembler.py  helpers.py  inference.py  inferencer.py  models.py  parse_dataset_metada.py  train.py  trainer.py  visualize.py
examples/weather/graphcast/: README.md  constants.py
examples/weather/io_benchmarks/: README.md  benchmark.py  experiment.py  fancy_bar_plot.py  fetch_era5.py  memmap_store.py  rankfile  set_device.sh  zarr_utils.py
examples/weather/unified/: train.py
modulus/launch/: __init__.py
nvidia_modulus.launch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
recipes/: README.md
recipes/fcn/: train_era5.py
recipes/rnn/: gray_scott_rnn.py  navier_stokes_rnn.py
recipes/sfno/: inferencer.py  install.sh  models.py  run.sh  train.py  trainer.py
test/ci_tests/: config.json  header_check.py
(+100 files in other folders)
