[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nvidia-modulus.launch"
authors = [
  { name="NVIDIA Modulus Team"},
]
description = "Optimized tranining recipes for accelerating PyTorch workflows of AI driven surrogates for physical systems"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Apache 2.0"}
dependencies = [
    "nvidia-modulus>=0.1.0",
    "hydra-core>=1.2.0",
    "termcolor>=2.1.1",
    "wandb>=0.13.7",
    "mlflow>=2.1.1",
    "pytest>=6.0.0",
    "pydantic>=1.10.2",
    "imageio>=2.28.1",
    "moviepy>=1.0.3",
    "tqdm>=4.65.0",
    "natsort>=7.0.1",
    "scikit-learn>=0.24.2",
    "absl-py>=0.15.0",
    "dm-tree==0.1.6",
    "dm-sonnet==2.0.0",
    "matplotlib",
    "numpy==1.19.5",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "modulus.launch.__version__"}

[tool.setuptools.packages.find]
include = ["modulus.*"] 
